Commit a master del blogpost en su version mas reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,17 @@
     <link rel="stylesheet" type="text/css" href="css/estilos.css" />
 </head>
 <body>
-    <h1>Aqui vamos a hacer un blog Post</h1>
-    <p>Y este es el parrafo de inicio</p>
-</body>
+    <div id="container">
+        <div id="post">
+            <h1>Este es el titulo atractivo
+                e interesante del Post
+            </h1>
+            <p>Y este es el parrafo de inicio
+                donde vamos a mostrar las cosas
+                increibles que se pueden hacer
+                con ramas..
+            </p>
+        </div>
+        </div>
+    </body>
 </html>
