Finalizada la cabecera con diseno rojo

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera
+            Cabecera de color ROJO
         </div>
         <div id="post">
             <h1>Este es el titulo atractivo
