Agregado contenido y tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,11 @@
                 increibles que se pueden hacer
                 con ramas..
             </p>
+            <p>
+                Los blogs son la mejor
+                forma de compartir tus ideas.
+                
+            </p>
         </div>
         </div>
     </body>
