Agregue suscripcion y color amarillo

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera de color ROJO
+            Cabecera de color AMARILLO
         </div>
         <div id="post">
             <h1>Este es el titulo atractivo
@@ -22,7 +22,9 @@
             <p>
                 Los blogs son la mejor
                 forma de compartir tus ideas.
-                
+            </p>
+            <p>
+                Suscribete y dale Like
             </p>
         </div>
         </div>
