--- a/blogpost.html
+++ b/blogpost.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Titulo del Post</title>
+    <title>Bienvenido a Blogpost</title>
     <link rel="stylesheet" type="text/css" href="css/estilos.css" />
 </head>
 <body>
