Nueva version del blogpost

--- a/blogpost.html
+++ b/blogpost.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Bienvenido a Blogpost</title>
+    <title>Bienvenido a Blogpost 2.0</title>
     <link rel="stylesheet" type="text/css" href="css/estilos.css" />
 </head>
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera de color AZUL
+            Cabecera de color AZUL con fondo ROJO
         </div>
         <div id="post">
             <h1>Este es el titulo atractivo
