Logo, diseño mejorado

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,9 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera de color AZUL con fondo ROJO
+            <img id="logo" src="imagenes/dragon.png"/>
+                BLOGPOST
+            <span id="tagline">Tu blog de cabecera</span>
         </div>
         <div id="post">
             <h1>Este es el titulo atractivo
