Agregadas las tildes

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,12 +13,12 @@
             <span id="tagline">Tu blog de cabecera</span>
         </div>
         <div id="post">
-            <h1>Este es el titulo atractivo
+            <h1>Este es el título atractivo
                 e interesante del Post
             </h1>
-            <p>Y este es el parrafo de inicio
+            <p>Y este es el párrafo de inicio
                 donde vamos a mostrar las cosas
-                increibles que se pueden hacer
+                increíbles que se pueden hacer
                 con ramas..
             </p>
             <p>
