Cambio a entidades html en vez de tildes

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,12 +13,12 @@
             <span id="tagline">Tu blog de cabecera</span>
         </div>
         <div id="post">
-            <h1>Este es el título atractivo
+            <h1>Este es el t&iacute;tulo atractivo
                 e interesante del Post
             </h1>
-            <p>Y este es el párrafo de inicio
+            <p>Y este es el p&aacute;rrafo de inicio
                 donde vamos a mostrar las cosas
-                increíbles que se pueden hacer
+                incre&iacute;bles que se pueden hacer
                 con ramas..
             </p>
             <p>
