Mensaje de contribucion y nuevo texto

--- a/blogpost.html
+++ b/blogpost.html
@@ -24,6 +24,8 @@
             <p>
                 Los blogs son la mejor
                 forma de compartir tus ideas.
+		Mucho mas que ir a conferencias o
+		salir en YouTube.
             </p>
             <p>
                 Suscribete y dale Like
