--- a/blogpost.html
+++ b/blogpost.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Bienvenido a Blogpost 2.0</title>
+    <title>Blogpost 2.0 es un super blog</title>
     <link rel="stylesheet" type="text/css" href="css/estilos.css" />
 </head>
 <body>
