--- a/blogpost.html
+++ b/blogpost.html
@@ -22,6 +22,9 @@
                 con ramas..
             </p>
             <p>
+                <img src="imagenes/fondo.jpg" width="100%" height="400px"/>
+            </p>
+            <p>
                 Los blogs son la mejor
                 forma de compartir tus ideas.
 		Mucho mas que ir a conferencias o
