--- a/blogpost.html
+++ b/blogpost.html
@@ -14,7 +14,7 @@
         </div>
         <div id="post">
             <h1>Este es el t&iacute;tulo atractivo
-                e interesante del Post
+                e interesante del Post 
             </h1>
             <p>Y este es el p&aacute;rrafo de inicio
                 donde vamos a mostrar las cosas
@@ -22,7 +22,7 @@
                 con ramas..
             </p>
             <p>
-                <img src="imagenes/fondo.jpg" width="100%" height="400px"/>
+                <img src="imagenes/bienvenidos.png" width="90%" height="300px"/>
             </p>
             <p>
                 Los blogs son la mejor
